Added backend mvc

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,5 +11,5 @@
 <body>
   <app-root></app-root>
 </body>
-<script src="/frontend.bundle.js"></script>
+<script src="/files/frontend.bundle.js"></script>
 </html>
